@@ -1,4 +1,7 @@
 6.2.0
+Improve speed of playback starting and resolver
+    before: min: 1.5s max: 2.6s median: 1.7s
+    after:  min: 0.9s max: 2.6s median: 1.2s
 Localize confirmation
 
 6.1.0
